--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx ts-node-dev --respawn --transpile-only index.ts",
-    "start": "node dist/index.js",
-    "build": "tsc"
+    "ts-dev": "npx ts-node-dev --respawn --transpile-only index.ts",
+    "dev": "node dist/index.js",
+    "start": "nodemon dist/index.js",
+    "build": "npx tsc"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +20,7 @@
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "csurf": "^1.10.0",
+    "csurf": "^1.2.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
@@ -28,8 +29,10 @@
     "i18next-http-middleware": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.11.0",
+    "node-cron": "^4.1.0",
     "node-telegram-bot-api": "^0.66.0",
     "nodemailer": "^6.10.0",
+    "notificationapi-node-server-sdk": "^2.5.0",
     "openai": "^4.85.4",
     "pg": "^8.13.3",
     "pg-hstore": "^2.3.4",
