--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "ts-dev": "npx ts-node-dev --respawn --transpile-only index.ts",
     "dev": "node dist/index.js",
-    "start": "nodemon dist/index.js",
+    "start": "node dist/index.js",
     "build": "npx tsc"
   },
   "keywords": [],
