--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -69,12 +69,20 @@ jobs:
           if [ ! -f "docker-compose.yml" ]; then echo "Error: docker-compose.yml not found"; exit 1; fi
           if [ ! -f "schema.sql" ]; then echo "Error: schema.sql not found"; exit 1; fi
 
+      - name: Validate SSH Key
+        run: |
+          echo "${{ secrets.VPS_SSH_KEY }}" > temp_key
+          chmod 600 temp_key
+          ssh-keygen -y -f temp_key || echo "SSH key validation failed"
+          rm temp_key
+
       - name: Copy Docker image to VPS
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.VPS_HOST }}
           username: shuhrat
           key: ${{ secrets.VPS_SSH_KEY }}
+          port: 22
           source: 'my-express-app.tar.gz'
           target: '/home/shuhrat/app'
 
@@ -84,6 +92,7 @@ jobs:
           host: ${{ secrets.VPS_HOST }}
           username: shuhrat
           key: ${{ secrets.VPS_SSH_KEY }}
+          port: 22
           source: 'docker-compose.yml'
           target: '/home/shuhrat/app'
 
@@ -93,6 +102,7 @@ jobs:
           host: ${{ secrets.VPS_HOST }}
           username: shuhrat
           key: ${{ secrets.VPS_SSH_KEY }}
+          port: 22
           source: 'schema.sql'
           target: '/home/shuhrat/app'
 
@@ -102,6 +112,7 @@ jobs:
           host: ${{ secrets.VPS_HOST }}
           username: shuhrat
           key: ${{ secrets.VPS_SSH_KEY }}
+          port: 22
           script: |
             cd /home/shuhrat/app
             gunzip -c my-express-app.tar.gz | docker load
