--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - .env
     volumes:
       - .:/app
-    command: sh -c "npm install && npm run dev"
-
+      - node_modules:/app/node_modules
+    command: npm run dev
   db:
     image: postgres:15
     restart: always
@@ -22,6 +22,6 @@ services:
       - '5432:5432'
     volumes:
       - pgdata:/var/lib/postgresql/data
-
 volumes:
   pgdata:
+  node_modules:
