--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,20 @@
+version: '3.9'
+
 services:
   backend:
-    build: ./
+    build: .
     ports:
       - '3000:3000'
     depends_on:
       - db
     env_file:
       - .env
+    restart: always
     volumes:
       - .:/app
-      - node_modules:/app/node_modules
-    command: npm run dev
+      - /app/node_modules
+    command: npm run start  # <<== PRODUCTION mode
+
   db:
     image: postgres:15
     restart: always
@@ -22,6 +26,6 @@ services:
       - '5432:5432'
     volumes:
       - pgdata:/var/lib/postgresql/data
+
 volumes:
   pgdata:
-  node_modules:
