--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
-version: '3.9'
-
 services:
   backend:
-    build: .
+    image: my-express-app:latest  # ⬅️ build emas, image
     ports:
       - '3000:3000'
     depends_on:
@@ -10,10 +8,6 @@ services:
     env_file:
       - .env
     restart: always
-    volumes:
-      - .:/app
-      - /app/node_modules
-    command: npm run start  # <<== PRODUCTION mode
 
   db:
     image: postgres:15
