--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
+    "i18next": "^25.2.1",
     "input-otp": "1.4.1",
     "install": "^0.13.0",
     "jiti": "latest",
@@ -88,4 +89,5 @@
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
-  }}
+  }
+}
