--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,21 @@
 server {
   listen 80;
-  server_name localhost;
+  server_name _;
 
   root /usr/share/nginx/html;
   index index.html;
 
+  # React/Vite routing uchun — fallback
   location / {
-    try_files $uri $uri/ /index.html;
+    try_files $uri /index.html;
+  }
+
+  # API so‘rovlarni tashqi backendga yuborish
+  location /api/ {
+    proxy_pass http://193.181.208.209:3000/;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   }
 }
