--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
     "react-i18next": "^15.5.2",
+    "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "latest",
