--- a/nginx.conf
+++ b/nginx.conf
@@ -1,21 +1,22 @@
 server {
-  listen 80;
-  server_name _;
+    listen 80;
+    server_name shuhrat.webdockcloud.com;
 
-  root /usr/share/nginx/html;
-  index index.html;
+    location / {
+        proxy_pass http://localhost:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-  # React/Vite routing uchun — fallback
-  location / {
-    try_files $uri /index.html;
-  }
-
-  # API so‘rovlarni tashqi backendga yuborish
-  location /api/ {
-    proxy_pass http://193.181.208.209:3000/;
-    proxy_http_version 1.1;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  }
+    location /api/ {
+        proxy_pass http://193.181.208.209:3000/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
