--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
 services:
   frontend:
     container_name: vite_frontend
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: my-vite-frontend:latest
     ports:
       - "8080:80"
     restart: always
