--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,34 +16,27 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'  # Node 20 - npm 11 versiyalar bilan mos
+          node-version: '20'
 
       - name: Clean up disk space before build
         run: |
-          echo "🧹 Cleaning up disk to prevent ENOSPC error..."
           docker system prune -af || true
           sudo rm -rf ~/.npm/_cacache || true
 
       - name: Create .env file from GitHub Secrets
         run: |
-          echo "📄 Creating .env file..."
           echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" >> .env
-          # Qo‘shimcha ENV o‘zgaruvchilar bo‘lsa, shu yerga qo‘shing:
-          # echo "VITE_OTHER_SECRET=${{ secrets.VITE_OTHER_SECRET }}" >> .env
 
       - name: Install dependencies
         run: npm install
 
-      - name: Build frontend
-        run: npm run build
-
       - name: Build frontend Docker image
         run: docker build -t my-vite-frontend:latest .
 
-      - name: Save frontend Docker image
+      - name: Save Docker image as archive
         run: docker save my-vite-frontend:latest | gzip > my-vite-frontend.tar.gz
 
-      - name: Copy frontend Docker image to VPS
+      - name: Copy Docker image to VPS
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.VPS_HOST }}
@@ -60,16 +53,9 @@ jobs:
           username: shuhrat
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
-            cd /home/shuhrat/app
-            echo "📦 Loading frontend Docker image..."
+            cd /home/shuhrat/actions-runner/_work/school_crm/school_crm
             gunzip -c my-vite-frontend.tar.gz | docker load
-
-            echo "🧹 Removing old frontend container..."
             docker-compose stop frontend || true
             docker-compose rm -f frontend || true
-
-            echo "🚀 Recreating frontend container..."
             docker-compose up -d --force-recreate frontend
-
-            echo "🧼 Final cleanup..."
             docker image prune -f || true
