--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@vitejs/plugin-react": "latest",
     "autoprefixer": "^10.4.20",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -59,16 +60,20 @@
     "next-themes": "latest",
     "npm": "^11.4.1",
     "react": "^18",
+    "react-calendar": "^6.0.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-circular-progressbar": "^2.2.0",
+    "react-datepicker": "^8.7.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
     "react-i18next": "^15.5.2",
     "react-icons": "^5.5.0",
-    "react-input-mask": "^2.0.4",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "latest",
     "react-toastify": "^11.0.5",
-    "recharts": "latest",
+    "recharts": "^3.1.2",
     "sass": "latest",
     "sass-embedded": "latest",
     "sonner": "^1.7.1",
