--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,24 +16,35 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 20
-          cache: 'npm'
+          node-version: '20'
+
+      - name: Clean up disk space before build
+        run: |
+          docker system prune -af || true
+          sudo rm -rf ~/.npm/_cacache || true
 
       - name: Create .env file from GitHub Secrets
         run: |
           echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" >> .env
 
       - name: Install dependencies
-        run: npm ci --prefer-offline --no-audit --no-fund
+        run: npm install
 
       - name: Build frontend Docker image
-        run: docker build -t registry.digitalocean.com/my-registry/my-vite-frontend:latest .
+        run: docker build -t my-vite-frontend:latest .
 
-      - name: Log in to registry
-        run: echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login registry.digitalocean.com -u ${{ secrets.REGISTRY_USER }} --password-stdin
+      - name: Save Docker image as archive
+        run: docker save my-vite-frontend:latest | gzip > my-vite-frontend.tar.gz
 
-      - name: Push Docker image
-        run: docker push registry.digitalocean.com/my-registry/my-vite-frontend:latest
+      - name: Copy Docker image to VPS
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: shuhrat
+          key: ${{ secrets.VPS_SSH_KEY }}
+          source: my-vite-frontend.tar.gz
+          target: /home/shuhrat/app
+          overwrite: true
 
       - name: Deploy frontend to VPS
         uses: appleboy/ssh-action@master
@@ -42,7 +53,9 @@ jobs:
           username: shuhrat
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
-            cd /home/shuhrat/app
-            docker pull registry.digitalocean.com/my-registry/my-vite-frontend:latest
+            cd /home/shuhrat/actions-runner/_work/school_crm/school_crm
+            gunzip -c my-vite-frontend.tar.gz | docker load
+            docker-compose stop frontend || true
+            docker-compose rm -f frontend || true
             docker-compose up -d --force-recreate frontend
             docker image prune -f || true
