--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.8",
+    "@types/luxon": "^3.7.1",
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
@@ -28,6 +29,7 @@
     "i18next-fs-backend": "^2.6.0",
     "i18next-http-middleware": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.7.1",
     "mongoose": "^8.11.0",
     "node-cron": "^4.1.0",
     "node-telegram-bot-api": "^0.66.0",
