--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,7 +28,7 @@ jobs:
           echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" >> .env
 
       - name: Install dependencies
-        run: npm install
+        run: node --max-old-space-size=4096 node_modules/.bin/npm install
 
       - name: Build frontend Docker image
         run: docker build -t my-vite-frontend:latest .
