--- a/package.json
+++ b/package.json
@@ -67,12 +67,12 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
+    "react-hot-toast": "^2.6.0",
     "react-i18next": "^15.5.2",
     "react-icons": "^5.5.0",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "latest",
-    "react-toastify": "^11.0.5",
     "recharts": "^3.1.2",
     "sass": "latest",
     "sass-embedded": "latest",
