--- a/nginx.conf
+++ b/nginx.conf
@@ -23,7 +23,7 @@ server {
     listen 80;
     server_name admin.intellectualprogress.uz;
 
-    root /usr/share/nginx/html;
+    root /usr/share/nginx/html; 
     index index.html;
 
     location / {
@@ -31,7 +31,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://localhost:3000/;
+        proxy_pass http://backend:3000/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -52,7 +52,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://localhost:3000/;
+        proxy_pass http://backend:3000/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
