--- a/nginx.conf
+++ b/nginx.conf
@@ -10,7 +10,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://backend:3000/;
+        proxy_pass http://193.181.208.209:3000/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -31,7 +31,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://backend:3000/;
+        proxy_pass http://193.181.208.209:3000/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -52,7 +52,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://backend:3000/;
+        proxy_pass http://193.181.208.209:3000/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
