Fix frontend directory path in CI/CD

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,8 +37,8 @@ jobs:
         run: |
           rm -rf /usr/share/nginx/html/*
           cp -r dist/* /usr/share/nginx/html/
-          chown -R www-data:www-data /usr/share/nginx/html
-          chmod -R 755 /usr/share/nginx/html
+          sudo chown -R www-data:www-data /usr/share/nginx/html
+          sudo chmod -R 755 /usr/share/nginx/html
           sudo systemctl reload nginx
 
       - name: Build frontend Docker image
