Fix frontend directory path in CI/CD

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -35,8 +35,8 @@ jobs:
 
       - name: Copy build files to Nginx root
         run: |
-          rm -rf /usr/share/nginx/html/*
-          cp -r dist/* /usr/share/nginx/html/
+          sudo rm -rf /usr/share/nginx/html/*
+          sudo cp -r dist/* /usr/share/nginx/html/
           sudo chown -R www-data:www-data /usr/share/nginx/html
           sudo chmod -R 755 /usr/share/nginx/html
           sudo systemctl reload nginx
