--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,16 +31,10 @@ jobs:
 
       - name: Copy build files to Nginx root
         run: |
-          # Fayllarni tozalash va nusxalash
           rm -rf /usr/share/nginx/html/*
           cp -r dist/* /usr/share/nginx/html/
-          
-          # Fayl ownership va permissions
-          sudo chown -R www-data:www-data /usr/share/nginx/html
-          chmod -R 755 /usr/share/nginx/html
-          
-          # Nginx reload qilish
-          sudo systemctl reload nginx
+          chmod -R 775 /usr/share/nginx/html
+          systemctl reload nginx
 
       - name: Build frontend Docker image
         run: docker build -t my-vite-frontend:latest .
