--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@engagespot/node": "^1.7.0",
+    "@knocklabs/node": "^1.28.0",
+    "@trycourier/courier": "^7.3.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.8",
     "@types/luxon": "^3.7.1",
